# carcassonne-ai

./: .gitignore  Cargo.toml  LICENSE  spec.md  test.sh
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  generate_moves.py  note.md
backend/generate-problem/: .gitignore  download.py  main.py  requirements.txt  signin.py
backend/migrations/2023-03-25-075608_create_player/: down.sql  up.sql
backend/migrations/2023-03-25-082119_create_game/: up.sql
backend/migrations/2023-03-25-145139_create_move/: down.sql
backend/migrations/2023-04-06-043625_add_next_player_id_to_game/: up.sql
backend/migrations/2023-07-19-040300_init/: down.sql  up.sql
backend/migrations/2023-07-26-044852_update-player-for-auth/: down.sql  up.sql
backend/migrations/2023-07-28-053517_player-color/: down.sql  up.sql
backend/migrations/2023-07-29-085009_add-current-tile-and-current-player-to-game/: down.sql  up.sql
backend/migrations/2023-08-01-035538_add-player-info-to-game/: down.sql  up.sql
backend/migrations/2023-08-16-081834_rating/: down.sql  up.sql
backend/migrations/2023-09-05-015623_optimal-move/: down.sql  up.sql
backend/migrations/2023-09-21-042728_waiting-game/: down.sql  up.sql
backend/shell/: create_game.sh  create_meeple_move.sh  create_player.sh  create_tile_move.sh  get_board.sh  get_game.sh  get_games.sh  get_moves.sh  get_player.sh  update_player.sh  wait_ai_move.sh
backend/src/: database.rs  error.rs  event.rs  handlers.rs  main.rs  optimal_move.rs  player.rs  problem.rs  schema.rs  storage.rs  translate.rs
backend/src/data/: 366166200.json  (+5 more)
(+160 files in other folders)
