[package]
name = "carcassonne"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version="0.4.24", features = ["serde"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
rand = "0.8.5"
serde_json = "1.0.96"
aws-config = "0.56.1"
aws-sdk-s3 = "0.30.0"
rocket-multipart-form-data = "0.10.6"
r2d2-diesel = "1.0.0"
reqwest = { version="0.11.22", features = ["blocking", "json"] }
lingua = { version = "1.6.1", default-features = false, features = ["english", "japanese"] }
